Fix selection gaps.

--- a/static/styles/custom.css
+++ b/static/styles/custom.css
@@ -77,7 +77,7 @@ div #info {
 }
 
 .checklistNavImage, #prefetch-checklists {
-    background: url(/static/images/IMG_20150517_2859.jpg);
+    background: url(x/static/images/IMG_20150517_2859.jpg);
     background-repeat: repeat-y;
     background-position: center center;
     background-attachment: scroll;
@@ -85,7 +85,7 @@ div #info {
 }
 
 .notablesNavImage, #prefetch-notables {
-    background: url(/static/images/IMG_20151121_4702.jpg);
+    background: url(x/static/images/IMG_20151121_4702.jpg);
     background-repeat: repeat-y;
     background-position: center center;
     background-attachment: scroll;
@@ -93,7 +93,7 @@ div #info {
 }
 
 .settingsNavImage, #main-settings {
-    background: url(/static/images/IMG_20151121_4680.jpg);
+    background: url(x/static/images/IMG_20151121_4680.jpg);
     background-repeat: repeat-y;
     background-position: center center;
     background-attachment: scroll;
@@ -113,4 +113,3 @@ div #info {
 .ui-li-divider {
     font-size: medium !important;
 }
-
