--- a/static/styles/typeahead.css
+++ b/static/styles/typeahead.css
@@ -134,7 +134,7 @@ p + p {
   /*padding: 0px 20px;*/
   padding: 0px 0px 0px 0px !important;
   font-size: 18px;
-  line-height: 40px;
+  line-height: 0px;
 }
 
 .tt-suggestion:hover {
